Bug 1916656 - [devtools] Adapt breadcrumb divider for High Contrast Mode. r=devtools-reviewers,ochameau.
The SVG itself is simplified to only take a solid color since that's the case
for all of other icons.

Differential Revision: https://phabricator.services.mozilla.com/D226668

--- a/devtools/client/themes/breadcrumbs.css
+++ b/devtools/client/themes/breadcrumbs.css
@@ -103,6 +103,8 @@
   left: -3px;
   margin: 0 4px 0 -1px;
   top: -1px;
+  -moz-context-properties: fill;
+  fill: var(--theme-icon-disabled-color);
 }
 
 .breadcrumbs-widget-item[checked] .breadcrumbs-widget-item-id {
